fix: first full_hr in contents is not visible

--- a/skin/adv_like/adv_like.css
+++ b/skin/adv_like/adv_like.css
@@ -772,7 +772,7 @@ div#sp-navigator {
 		display: none;
 	}
 
-	hr.full_hr:first-of-type {
+	body > hr.full_hr:first-of-type {
 		display: none;
 	}
 
